--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,9 +157,6 @@ android {
                 mappingFileUploadEnabled false
             }
         }
-        profile {
-            initWith debug
-        }
     }
     lintOptions {
         checkReleaseBuilds false
@@ -304,17 +301,6 @@ configurations {
 ////    }
 ////}
 //}
-String storageUrl = System.env.FLUTTER_STORAGE_BASE_URL ?: "https://storage.googleapis.com"
-repositories {
-    maven {
-        url "${rootProject.getRootDir().getAbsoluteFile()}${File.separator}..${File.separator}flutter_module${File.separator}build${File.separator}host${File.separator}outputs${File.separator}repo"
-    }
-    maven {
-        url "$storageUrl/download.flutter.io"
-    }
-
-}
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     if (isHaHa.toBoolean()) {
@@ -326,14 +312,9 @@ dependencies {
         implementation project(path: ':components:login')
     }
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
 //    apkCheckerDependency group: "com.tencent.matrix", name: "matrix-apk-canary", version: "0.6.0", changing: true
-    debugImplementation 'com.jamesfchen.flutter_module:flutter_debug:1.0'
-    profileImplementation 'com.jamesfchen.flutter_module:flutter_profile:1.0'
-    releaseImplementation 'com.jamesfchen.flutter_module:flutter_release:1.0'
-
-
 }
+buildDir = new File(rootProject.projectDir, "../build/host")
 println("app end")
 //在这个阶段可以下载一些东西
 gradle.taskGraph.whenReady { taskGraph ->
