--- a/framework/loader/build.gradle
+++ b/framework/loader/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     api project(path: ':framework:network')
 //    implementation project(path: ':framework:storage')
     api project(path: ':framework:image')
-    api project(path: ':flutter')
+    api project(path: ':framework:flutter')
     kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
 
