--- a/framework/flutter/build.gradle
+++ b/framework/flutter/build.gradle
@@ -25,7 +25,7 @@ if (flutterVersionName == null) {
 }
 apply from: "${flutterRoot}${File.separator}packages${File.separator}flutter_tools${File.separator}gradle${File.separator}flutter.gradle"
 flutter {
-    source "${rootProject.projectDir}${File.separator}..${File.separator}flutter_bundle"
+    source "${rootProject.projectDir}${File.separator}..${File.separator}flutter_module"
 }
 group 'com.jamesfchen.flutter_module'
 version '1.0'
