--- a/script/flutter/module_plugin_loader.gradle
+++ b/script/flutter/module_plugin_loader.gradle
@@ -1,14 +1,16 @@
+// Copyright 2014 The Flutter Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+// This file is included from `<module>/.android/include_flutter.groovy`,
+// so it can be versioned with the Flutter SDK.
+
 import groovy.json.JsonSlurper
-//def scriptFile = getClass().protectionDomain.codeSource.location.toURI()
-//def projectDir = new File(scriptFile).parentFile.parentFile #settingsDir
-def module_name =':framework:flutter'
-def fwkProject = new File(gradle.settingsDir,'framework/flutter')
-def bunldeProject = new File(gradle.settingsDir,'../flutter_module')
-gradle.include module_name
-gradle.project(module_name).projectDir = fwkProject
+
+def moduleProjectRoot = project(':flutter').projectDir.parentFile.parentFile
 
 // Note: if this logic is changed, also change the logic in app_plugin_loader.gradle.
-def pluginsFile = new File(bunldeProject, '.flutter-plugins-dependencies')
+def pluginsFile = new File(moduleProjectRoot, '.flutter-plugins-dependencies')
 if (pluginsFile.exists()) {
     def object = new JsonSlurper().parseText(pluginsFile.text)
     assert object instanceof Map
@@ -24,12 +26,10 @@ if (pluginsFile.exists()) {
         project(":${androidPlugin.name}").projectDir = pluginDirectory
     }
 }
-//gradle 初始化完成的回调
+
 gradle.getGradle().projectsLoaded { g ->
-    println("[ gradle initialzation ] projectsLoaded] project初始化完成 start")
     g.rootProject.beforeEvaluate { p ->
         def _mainModuleName = binding.variables['mainModuleName']
-        println("_mainModuleName $_mainModuleName")
         if (_mainModuleName != null && !_mainModuleName.empty) {
             p.ext.mainModuleName = _mainModuleName
         }
@@ -37,9 +37,8 @@ gradle.getGradle().projectsLoaded { g ->
     g.rootProject.afterEvaluate { p ->
         p.subprojects { sp ->
             if (sp.name != 'flutter') {
-                sp.evaluationDependsOn(module_name)
+                sp.evaluationDependsOn(':flutter')
             }
         }
     }
-    println("[ gradle initialzation ] projectsLoaded] project初始化完成 end")
 }
