--- a/framework/flutter/build.gradle
+++ b/framework/flutter/build.gradle
@@ -25,9 +25,9 @@ if (flutterVersionName == null) {
 }
 apply from: "${flutterRoot}${File.separator}packages${File.separator}flutter_tools${File.separator}gradle${File.separator}flutter.gradle"
 flutter {
-    source "${rootProject.projectDir}${File.separator}..${File.separator}flutter_module"
+    source "${rootProject.projectDir}${File.separator}..${File.separator}flutter_bundle"
 }
-group 'com.jamesfchen.flutter_module'
+group 'com.jamesfchen.flutter_bundle'
 version '1.0'
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
