--- a/settings.gradle
+++ b/settings.gradle
@@ -9,9 +9,10 @@ if (isHaHa.toBoolean()) {
     include ':components:module1'
 } else {
     include ':mockserver'
-    include ':framework:common', ':framework:network', ':framework:storage',
-            ':framework:image', ':framework:av', ':framework:map',
-            ':framework:chatroom', ':framework:uicomponent', ':framework:loader'
+    include ':framework:common', ':framework:loader',
+            ':framework:network', ':framework:storage', ':framework:image',
+            ':framework:av', ':framework:map', ':framework:chatroom',
+            ':framework:uicomponent'
     include ':components:myhome',
             ':components:login'
     setBinding(new Binding([gradle: this]))
