--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,8 +112,8 @@ android {
 
         }
         releaseSigningConfig {
-            (keyAlias, keyPassword, storePassword) = ['release', 'release', 'release']
-            storeFile file("release.jks")
+            (keyAlias, keyPassword, storePassword) = ['123456', '123456', '123456']
+            storeFile file("debug.jks")
             v1SigningEnabled true
             v2SigningEnabled true
         }
