--- a/components/login/build.gradle
+++ b/components/login/build.gradle
@@ -12,6 +12,9 @@ def srcDirs = [
 
 ]
 android {
+    defaultConfig{
+        buildConfigField('String', 'BASE_URL', '" https://www.easy-mock.com/mock/5ce10c941e436e14aceef040/"')
+    }
     sourceSets {
         main {
             java.excludes = [
