--- a/framework/network/build.gradle
+++ b/framework/network/build.gradle
@@ -3,48 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: "kotlin-android-extensions"
 apply plugin: 'kotlin-kapt'
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
-
-//apply plugin: 'com.google.protobuf'
-//protobuf {
-//    protoc {
-//        // You still need protoc like in the non-Android case
-//        artifact = 'com.google.protobuf:protoc:3.7.1'
-//    }
-//    plugins {
-//        javalite {
-//            // The codegen for lite comes as a separate artifact
-//            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
-//        }
-//        grpc {
-////            artifact = 'io.grpc:protoc-gen-grpc-java:1.0.0-pre2'
-//            artifact = "io.grpc:protoc-gen-grpc-java:${rootProject.ext.grpcVersion}"
-//        }
-//    }
-//    generateProtoTasks {
-//        all().each { task ->
-//            task.builtins {
-//                // In most cases you don't need the full Java output
-//                // if you use the lite output.
-//                remove java
-//            }
-//            task.plugins {
-//                javalite {}
-//                grpc {
-//                    // Options added to --grpc_out
-//                    option 'lite'
-//                }
-//            }
-//        }
-//    }
-//}
-
 def srcDirs = [
-        "protocol",
-        "retrofit/retrofit/src",
-        "retrofit/retrofit-adapters/rxjava3/src",
-        "retrofit/retrofit-converters/gson/src",
-        "retrofit/retrofit-converters/moshi/src",
-        "retrofit/retrofit-converters/wire/src"
+        "super-retrofit/retrofit/src",
+        "super-retrofit/retrofit-adapters/rxjava3/src",
+        "super-retrofit/retrofit-converters/gson/src",
+        "super-retrofit/retrofit-converters/moshi/src",
+        "super-retrofit/retrofit-converters/wire/src"
 
 ]
 android {
@@ -55,11 +19,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField('String', 'WEATHER_APP_ID', '"fb306d52c9aaff4a1ae20fbe8aa38afb"')
-        buildConfigField('String', 'BASE_URL', '" https://www.easy-mock.com/mock/5ce10c941e436e14aceef040/"')
-
     }
 
     buildTypes {
@@ -113,7 +73,7 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-    println("getLocalIP--->${getLocalIP()}")
+//    println("getLocalIP--->${getLocalIP()}")
 }
 
 static String getLocalIP() {
@@ -140,28 +100,24 @@ dependencies {
     testImplementation files('libs/jsoup-1.12.1.jar')
     api project(path: ':framework:common')
     api project(path: ':mockserver')
-
-    /**
-     *  ===============================network  start====================================
-     */
-
     //    api 'com.squareup.okhttp3:okhttp:3.8.1'
-
     //    api 'com.android.volley:volley:1.1.1'
     api 'com.squareup.okhttp3:okhttp-tls:4.0.1'
+    api 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+    api "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
     testImplementation 'com.squareup.okhttp3:okhttp-dnsoverhttps:4.0.1'
-
     /*
-         >>>>>> http style  start
-         */
+    >>>> http style  start
+    */
 
     //restful
-//    api "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
-//    api "com.squareup.retrofit2:retrofit-converters:${rootProject.ext.retrofitVersion}"
-//    api "com.squareup.retrofit2:adapter-rxjava2:${rootProject.ext.retrofitVersion}"
-    api "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
-    api 'com.facebook.stetho:stetho-okhttp3:1.5.1'
-
+    api "com.squareup.retrofit2:retrofit:2.9.0"
+//    api "com.squareup.retrofit2:retrofit-converters:2.8.1"
+    api "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
+    api "com.squareup.retrofit2:converter-wire:2.9.0"
+    api "com.squareup.retrofit2:converter-gson:2.9.0"
+//    api "com.squareup.retrofit2:converter-moshi:2.9.0"
+//    api "com.squareup.retrofit2:converter-protobuf:2.9.0"
     //rpc
     api("io.grpc:grpc-protobuf-lite:${rootProject.ext.grpcVersion}") {//存在依赖冲突
 //        exclude group:  'com.google.guava'
@@ -171,13 +127,9 @@ dependencies {
     api "io.grpc:grpc-stub:${rootProject.ext.grpcVersion}"
 
     /*
-        http style  end
-         */
+      http style  end
+    */
 
-
-    /**
-     *  ===============================network end====================================
-     */
     kapt "com.google.dagger:dagger-compiler:2.16"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.github.jnr:jnr-unixsocket:0.23"
