--- a/framework/network/build.gradle
+++ b/framework/network/build.gradle
@@ -4,12 +4,12 @@ apply plugin: "kotlin-android-extensions"
 apply plugin: 'kotlin-kapt'
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 def srcDirs = [
-        "super-retrofit/retrofit/src",
-        "super-retrofit/retrofit-adapters/rxjava3/src",
-        "super-retrofit/retrofit-converters/gson/src",
-        "super-retrofit/retrofit-converters/moshi/src",
-        "super-retrofit/retrofit-converters/wire/src"
-
+//        "super-retrofit/retrofit/src",
+//        "super-retrofit/retrofit-adapters/rxjava3/src",
+//        "super-retrofit/retrofit-converters/gson/src",
+//        "super-retrofit/retrofit-converters/moshi/src",
+//        "super-retrofit/retrofit-converters/wire/src"
+//
 ]
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
