--- a/framework/uicomponent/build.gradle
+++ b/framework/uicomponent/build.gradle
@@ -95,18 +95,28 @@ dependencies {
     api 'androidx.navigation:navigation-fragment-ktx:2.3.0-alpha02'
     api 'androidx.navigation:navigation-ui-ktx:2.3.0-alpha02'
 
+    api 'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
+    api 'com.scwang.smart:refresh-header-classics:2.0.3'    //经典刷新头
+    api 'com.scwang.smart:refresh-header-radar:2.0.3'       //雷达刷新头
+    api 'com.scwang.smart:refresh-header-falsify:2.0.3'     //虚拟刷新头
+    api 'com.scwang.smart:refresh-header-material:2.0.3'    //谷歌刷新头
+    api 'com.scwang.smart:refresh-header-two-level:2.0.3'   //二级刷新头
+    api 'com.scwang.smart:refresh-footer-ball:2.0.3'        //球脉冲加载
+    api 'com.scwang.smart:refresh-footer-classics:2.0.3'    //经典加载
+    
+
     //layout start
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+    api 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
     api 'com.google.android:flexbox:1.1.0'
     //layout end
 
-    api 'androidx.palette:palette:1.0.0'
+    api 'androidx.palette:palette-ktx:1.0.0'
     /*
    *该库和`com.android.support:design:`都存在v4，编译时会报错：
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
    *解决方法：需要exclude掉v4包
     */
-    api "com.google.android.material:material:1.2.0-alpha05"
+    api "com.google.android.material:material:1.4.0-beta01"
     api 'androidx.vectordrawable:vectordrawable:1.1.0'
 
     //animotor
@@ -128,11 +138,11 @@ dependencies {
     testImplementation "androidx.paging:paging-common:2.1.1" // For Kotlin use paging-common-ktx
     api "androidx.paging:paging-rxjava2:2.1.1" // For Kotlin use paging-rxjava2-ktx
 
-    api "androidx.work:work-runtime:2.3.2"
-    api "androidx.work:work-runtime-ktx:2.3.2"
-    api "androidx.work:work-rxjava2:2.3.2"
-    api "androidx.work:work-gcm:2.3.2"
-    androidTestImplementation "androidx.work:work-testing:2.3.2"
+    api "androidx.work:work-runtime:2.5.0"
+    api "androidx.work:work-runtime-ktx:2.5.0"
+    api "androidx.work:work-rxjava2:2.5.0"
+    api "androidx.work:work-gcm:2.5.0"
+    androidTestImplementation "androidx.work:work-testing:2.5.0"
 //    api "androidx.work:work-firebase:2.2.0"
 
     api 'com.firebaseui:firebase-ui-database:6.0.2'
@@ -140,9 +150,9 @@ dependencies {
     api 'com.firebaseui:firebase-ui-auth:6.0.2'
     api 'com.firebaseui:firebase-ui-storage:6.0.2'
 
-    api 'androidx.emoji:emoji:1.0.0'
-    api 'androidx.emoji:emoji-appcompat:1.0.0'
-    api 'androidx.emoji:emoji-bundled:1.0.0'
+    api 'androidx.emoji:emoji:1.1.0'
+    api 'androidx.emoji:emoji-appcompat:1.1.0'
+    api 'androidx.emoji:emoji-bundled:1.1.0'
 
     /**
      * ================================ui end=====================================
