--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ buildscript {
 //        classpath 'com.google.firebase:firebase-plugins:1.1.5'
         classpath("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
         classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.0'
+        classpath "com.alibaba:arouter-register:1.0.2"
     }
 }
 
