--- a/script/component.gradle
+++ b/script/component.gradle
@@ -1,10 +1,15 @@
-apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/console.gradle"
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/console.gradle"
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
-
+kapt {
+    arguments {
+        printInfo("cjf annotationProcessorOptions ${project.getName()}")
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
@@ -15,7 +20,11 @@ android {
         versionName rootProject.ext.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
+            }
+        }
     }
 
     buildTypes {
@@ -31,5 +40,6 @@ dependencies {
     api project(path: ':framework:loader')
     kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
+    kapt   'com.alibaba:arouter-compiler:1.2.1'
 }
 
