--- a/components/myhome/src/main/AndroidManifest.xml
+++ b/components/myhome/src/main/AndroidManifest.xml
@@ -53,9 +53,10 @@
 
         </activity>
         <activity
-            android:name="com.hawksjamesf.myhome.SetupWizardActivity"
+            android:name="com.hawksjamesf.myhome.custom.CustomViewActivity"
             android:label="@string/title_activity_setup_wizard"
             android:theme="@style/AppTheme" />
+        <activity android:name="com.hawksjamesf.myhome.custom.DispatchEventActivity" />
 
         <activity android:name="com.hawksjamesf.spacecraft.NavigationActivity" />
         <activity android:name="com.hawksjamesf.spacecraft.vm.MVVMActivity" />
