--- a/script/component.gradle
+++ b/script/component.gradle
@@ -72,6 +72,7 @@ dependencies {
     api project(path: ':framework:loader')
     kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
+    annotationProcessor 'androidx.databinding:databinding-compiler:4.1.0-alpha01'
     kapt 'com.alibaba:arouter-compiler:1.2.1'
 }
 
