--- a/framework/uicomponent/build.gradle
+++ b/framework/uicomponent/build.gradle
@@ -4,11 +4,9 @@ apply plugin: 'kotlin-android-extensions'
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
 
 def srcDirs = [
-        "carousel",
         "colorpicker",
         "drawable",
         "navigation",
-        "paging",
         "bottomupDialog",
         "launchmode",
         "fragmentx",
@@ -61,6 +59,7 @@ android {
                 aidl.srcDirs += "$projectDir/$it/androidTest/aidl"
                 res.srcDirs += "$projectDir/$it/androidTest/res"
                 java.srcDirs += "$projectDir/$it/androidTest/java"
+
             }
         }
         test {
@@ -84,6 +83,7 @@ dependencies {
     /**
      * ================================ui start=====================================
      */
+    api 'jp.wasabeef:recyclerview-animators:4.0.2'
     api "androidx.recyclerview:recyclerview:1.1.0"
     api 'androidx.navigation:navigation-fragment:2.3.0-alpha02'
     api 'androidx.navigation:navigation-ui:2.3.0-alpha02'
@@ -130,10 +130,10 @@ dependencies {
     api 'com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:3.0.0'
     api 'com.jakewharton.rxbinding3:rxbinding-viewpager:3.0.0'
 
-    api "androidx.paging:paging-runtime:2.1.1" // For Kotlin use paging-runtime-ktx
-    api "androidx.paging:paging-runtime-ktx:2.1.1"
-    testImplementation "androidx.paging:paging-common:2.1.1" // For Kotlin use paging-common-ktx
-    api "androidx.paging:paging-rxjava2:2.1.1" // For Kotlin use paging-rxjava2-ktx
+    api "androidx.paging:paging-runtime-ktx:3.0.0"
+    testImplementation "androidx.paging:paging-common-ktx:3.0.0"
+//    api "androidx.paging:paging-rxjava3-ktx:3.0.0"
+    api "androidx.paging:paging-compose:1.0.0-alpha09"
 
     api "androidx.work:work-runtime:2.5.0"
     api "androidx.work:work-runtime-ktx:2.5.0"
