--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,6 @@
 [submodule "framework/network/super-retrofit"]
 	path = framework/network/super-retrofit
 	url = https://github.com/JamesfChen/super-retrofit.git
+[submodule "framework/uicomponent/uix"]
+	path = framework/uicomponent/uix
+	url = https://github.com/JamesfChen/uix.git
