--- a/framework/uicomponent/build.gradle
+++ b/framework/uicomponent/build.gradle
@@ -1,9 +1,4 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle"
-
-def srcDirs = [
+project.ext.srcDirs =[
         "colorpicker",
         "drawable",
         "navigation",
@@ -16,79 +11,16 @@ def srcDirs = [
         "customview",
 
 ]
-android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
-    defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-
-        inhouse {
-            initWith debug
-            debuggable true
-        }
-    }
-    sourceSets {
-        main {
-            java.excludes = [
-                    '**/build/**',
-            ]
-            srcDirs.forEach {
-                assets.srcDirs += "$projectDir/$it/main/assets"
-                aidl.srcDirs += "$projectDir/$it/main/aidl"
-                res.srcDirs += "$projectDir/$it/main/res-frame-animation"
-                res.srcDirs += "$projectDir/$it/main/res"
-                java.srcDirs += "$projectDir/$it/main/java"
-
-                assets.srcDirs += "$projectDir/src/inhouse/assets"
-                aidl.srcDirs += "$projectDir/src/inhouse/aidl"
-                res.srcDirs += "$projectDir/src/inhouse/res"
-                java.srcDirs += "$projectDir/src/inhouse/java"
-            }
-        }
-        androidTest {
-            srcDirs.forEach {
-                assets.srcDirs += "$projectDir/$it/androidTest/assets"
-                aidl.srcDirs += "$projectDir/$it/androidTest/aidl"
-                res.srcDirs += "$projectDir/$it/androidTest/res"
-                java.srcDirs += "$projectDir/$it/androidTest/java"
-
-            }
-        }
-        test {
-            srcDirs.forEach {
-                java.srcDirs += "$projectDir/$it/test/java"
-            }
-
-        }
-    }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-
-}
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/foundation.gradle"
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':framework:common')
 //    implementation project(path: ':framework:av')
 //    implementation project(path: ':image')
     /**
      * ================================ui start=====================================
      */
     api 'jp.wasabeef:recyclerview-animators:4.0.2'
+    api 'com.github.DingMouRen:LayoutManagerGroup:1e6f4f96eb'
     api "androidx.recyclerview:recyclerview:1.1.0"
     api 'androidx.navigation:navigation-fragment:2.3.0-alpha02'
     api 'androidx.navigation:navigation-ui:2.3.0-alpha02'
@@ -105,7 +37,7 @@ dependencies {
     api 'com.scwang.smart:refresh-header-two-level:2.0.3'   //二级刷新头
     api 'com.scwang.smart:refresh-footer-ball:2.0.3'        //球脉冲加载
     api 'com.scwang.smart:refresh-footer-classics:2.0.3'    //经典加载
-    
+
 
     //layout start
     api 'androidx.constraintlayout:constraintlayout:2.1.0-beta02'
