--- a/framework/flutter/gradle.properties
+++ b/framework/flutter/gradle.properties
@@ -1,4 +1,4 @@
-flutter.sdk=/Users/hawks.jamesf/Library/Android/flutter/
+flutter.sdk=E\:\\Sdk_flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
