--- a/script/foundation.gradle
+++ b/script/foundation.gradle
@@ -30,10 +30,10 @@ android {
                     res.srcDirs += "$projectDir/$it/main/res"
                     java.srcDirs += "$projectDir/$it/main/java"
 
-                    assets.srcDirs += "$projectDir/src/inhouse/assets"
-                    aidl.srcDirs += "$projectDir/src/inhouse/aidl"
-                    res.srcDirs += "$projectDir/src/inhouse/res"
-                    java.srcDirs += "$projectDir/src/inhouse/java"
+//                    assets.srcDirs += "$projectDir/src/inhouse/assets"
+//                    aidl.srcDirs += "$projectDir/src/inhouse/aidl"
+//                    res.srcDirs += "$projectDir/src/inhouse/res"
+//                    java.srcDirs += "$projectDir/src/inhouse/java"
                 }
             }
             androidTest {
@@ -60,10 +60,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
-        inhouse {
-            initWith debug
-            debuggable true
-        }
+//        inhouse {
+//            initWith debug
+//            debuggable true
+//        }
     }
 
     kotlinOptions {
