--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,21 +1,25 @@
-apply plugin: 'java'
-apply plugin: 'groovy'
-//apply plugin: 'kotlin'
-
 buildscript {
-
     repositories {
         mavenLocal()
         mavenCentral()
         google()
     }
 }
+plugins {
+    id 'groovy-gradle-plugin'
+}
+apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: "java-gradle-plugin"
 gradlePlugin {
     plugins {
-        foundationModule {
+        foundation {
             id = 'foundation-module'
             implementationClass = 'com.jamesfchen.plugin.FoundationModulePlugin'
+        }
+        bundle {
+            id = 'bundle-module'
+            implementationClass = 'com.jamesfchen.plugin.BundleModulePlugin'
         }
     }
 }
@@ -38,12 +42,6 @@ dependencies {
 //    implementation group: 'org.ow2.asm', name: 'asm', version: '5.1'
 //    implementation group: 'org.ow2.asm', name: 'asm-commons', version: '5.1'
 }
-repositories {
-    mavenLocal()
-    mavenCentral()
-    jcenter()
-    google()
-}
 tasks.withType(GroovyCompile) {
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
@@ -56,4 +54,8 @@ sourceSets {
     main {
         compileClasspath += configurations.provided
     }
+}
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
