--- a/gradle_plugin/build.gradle
+++ b/gradle_plugin/build.gradle
@@ -37,9 +37,9 @@ configurations {
 //}
 sourceSets {
     main {
-        java.srcDirs = ['src/main/java', '../buildSrc/src/main/java']
-        groovy.srcDirs = ['src/main/groovy', '../buildSrc/src/main/groovy']
-        resources.srcDirs = ['src/main/resources', '../buildSrc/src/main/resources']
+//        java.srcDirs = ['src/main/java', '../buildSrc/src/main/java']
+//        groovy.srcDirs = ['src/main/groovy', '../buildSrc/src/main/groovy']
+//        resources.srcDirs = ['src/main/resources', '../buildSrc/src/main/resources']
     }
 }
 
